--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,16 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
+<div class="copyright">
+    <p>&copy; {{ site.time | date: '%Y' }} <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}"><strong>{{
+                site.title }}</strong></a></p>
+    <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+    <div class="social">
+        <ul>
+            <li>
+                <a href="{{ site.github }}" target="_blank">GitHub</a>
             </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            <li>
+                <a href="{{ site.twitter }}" target="_blank">Twitter</a>
+            </li>
         </ul>
-      </div>
 
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
     </div>
-
-  </div>
-
-</footer>
+</div>
