--- a/_layouts/center.html
+++ b/_layouts/center.html
@@ -2,8 +2,8 @@
 <html>
   {% include head.html %}
   <body>
-    <div class="page-content">
-      {{ content }} 
+    <div class="page-content center">
+      {{ content }}
       {% include footer.html %}
     </div>
     {% include google_analytics.html %}
