--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,27 +1,35 @@
 ---
-layout: default
+layout: center
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
-  </header>
+      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
+      {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
 
-  <div class="post-content e-content" itemprop="articleBody">
+      {% assign post = page %}
+  		{% if post.tags.size > 0 %}
+
+  		{% assign tags_content = "" %}
+  		{% for post_tag in post.tags %}
+  			{% capture tags_content_temp %}
+  				{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>
+  			{% endcapture %}
+  			{% assign tags_content = tags_content_temp %}
+  		{% endfor %}
+
+  		&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
+
+  	  {% endif %}
+
+    </p>
+  </header>
+  <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
-
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+  <hr>
+  {% if page.comment %}
+    {% include disqus.html %}
+  {% endif %}
 </article>
