Cleanup, change socials

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 <a href="{{ site.github }}" target="_blank">GitHub</a>
             </li>
             <li>
-                <a rel="me" href="https://toot.community/@alxwnth" target="_blank">Mastodon</a>
+                <a rel="me" href="http://twitter.com/alxwnth" target="_blank">Twitter</a>
             </li>
         </ul>
 
