--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: center
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <div class="go-home"><a href="/">< home</a><br/></div>
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
@@ -22,7 +23,6 @@ layout: center
   		&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
 
   	  {% endif %}
-
     </p>
   </header>
   <div class="post-content" itemprop="articleBody">
